--- a/sass/components/_helpers.scss
+++ b/sass/components/_helpers.scss
@@ -58,8 +58,8 @@
 }
 
 .alert-warning {
-    background-color: #fcf8e3;
-    border-color: #faebcc;
+    background-color: #00B0E0;
+    border-color: #00B0E0;
     color: #8a6d3b;
 }
 
@@ -194,6 +194,10 @@
 
 .hidden {
     visibility: hidden;
+}
+
+.h140 {
+    height: 140px;
 }
 
 .show-tablet {
